crates/internal/brink-syntax-native/src/parser/tests/snapshots/brink_syntax_native__parser__tests__divert__insta_return_redirect.snap
---
source: crates/internal/brink-syntax-native/src/parser/tests/divert.rs
expression: "format!(\"{:#?}\", p.syntax())"
---
SOURCE_FILE@0..27
  FLOW_DECL@0..26
    KW_FLOW@0..4 "flow"
    WHITESPACE@4..5 " "
    IDENT@5..6 "f"
    PARAM_LIST@6..8
      L_PAREN@6..7 "("
      R_PAREN@7..8 ")"
    BLOCK@8..26
      WHITESPACE@8..9 " "
      L_BRACE@9..10 "{"
      NEWLINE@10..11 "\n"
      WHITESPACE@11..13 "  "
      RETURN_REDIRECT@13..24
        KW_RETURN@13..19 "return"
        WHITESPACE@19..20 " "
        DIVERT@20..22 "->"
        DIVERT_TARGET@22..24
          WHITESPACE@22..23 " "
          PATH@23..24
            PATH_SEGMENT@23..24
              IDENT@23..24 "x"
      NEWLINE@24..25 "\n"
      R_BRACE@25..26 "}"
  NEWLINE@26..27 "\n"
