crates/internal/brink-syntax-native/src/parser/tests/snapshots/brink_syntax_native__parser__tests__divert__insta_splice_with_args.snap
---
source: crates/internal/brink-syntax-native/src/parser/tests/divert.rs
expression: "format!(\"{:#?}\", p.syntax())"
---
SOURCE_FILE@0..46
  FLOW_DECL@0..45
    KW_FLOW@0..4 "flow"
    WHITESPACE@4..5 " "
    IDENT@5..6 "f"
    PARAM_LIST@6..8
      L_PAREN@6..7 "("
      R_PAREN@7..8 ")"
    BLOCK@8..45
      WHITESPACE@8..9 " "
      L_BRACE@9..10 "{"
      NEWLINE@10..11 "\n"
      WHITESPACE@11..13 "  "
      CHOICE_POINT@13..43
        L_BRACE@13..14 "{"
        QUESTION@14..15 "?"
        NEWLINE@15..16 "\n"
        WHITESPACE@16..20 "    "
        SPLICE@20..40
          THREAD@20..22 "<-"
          PATH@22..30
            PATH_SEGMENT@22..30
              WHITESPACE@22..23 " "
              IDENT@23..30 "options"
          ARG_LIST@30..39
            L_PAREN@30..31 "("
            PATH_EXPR@31..35
              PATH@31..35
                PATH_SEGMENT@31..35
                  IDENT@31..35 "gold"
            COMMA@35..36 ","
            WHITESPACE@36..37 " "
            INTEGER_LIT@37..38
              INTEGER@37..38 "2"
            R_PAREN@38..39 ")"
          NEWLINE@39..40 "\n"
        WHITESPACE@40..42 "  "
        R_BRACE@42..43 "}"
      NEWLINE@43..44 "\n"
      R_BRACE@44..45 "}"
  NEWLINE@45..46 "\n"
